# ADCensus-cuda

./: README.md
AD-Census-CUDA/: CMakeLists.txt  main.cpp
